--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@ common-js:
 <!-- ALi Qassem | Copyright 2021 -->
 {% include head.html %}
 
-<body style="background-color: #79b8ff;width: 0%;">
+<body style="background-color: #79b8ff;">
 
   {% include gtm_body.html %}
 
