--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@ common-js:
 <!-- ALi Qassem | Copyright 2021 -->
 {% include head.html %}
 
-<body style="background-color: #79b8ff;">
+<body style="background-color: #008080;">
 
   {% include gtm_body.html %}
 
