--- a/assets/css/staticman.css
+++ b/assets/css/staticman.css
@@ -4,7 +4,7 @@
 .staticman-comments form {
   margin: 0 0 5px 0;
   padding: 1em;
-  background-color: #f2f3f3;
+  background-color: #008080;
 }
 .staticman-comments form p {
   margin-bottom: 2.5px;
