--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -381,7 +381,7 @@ footer {
 }
 
 footer p.text-muted {
-  color: #FFF8DC;
+  color: {{ site.footer-text-col | default: "#777777" }} !important;
 }
 
 footer a {
