--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
       </p>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
         Powered by
-        <a href="https://linktr.ee/ANtqAmE">Ali Qassem</a>
+        <a href="https://linktr.ee/e5t3hb4r47">Ali Qassem</a>
       </p>{% endunless %}
       </div>
     </div>
